--- a/Home.css
+++ b/Home.css
@@ -25,7 +25,7 @@ header {
 header img {
 	width: 70px;
 	top: 0;
-	left: 0;
+	margin-left: 3px;
 	float: left;
 }
 
@@ -34,6 +34,7 @@ nav ul {
 }
 
 nav li {
+	width: 50px;
 	float: right;
 	padding: 10px 10px;
 	margin: 20px 20px 0 0;
@@ -44,9 +45,38 @@ nav a {
 	color: black;
 }
 
+nav a:hover {
+	color: red;
+}
 
 
+#content {
+	width: 100%;
+	height: 75%;
+	border-top: 1px solid black;
+	margin: 0 auto;
+	clear: both;
+}
+
+#content iframe {
+	width: 350px;
+	height: 200px;
+	margin: 25px;
+	border: 1px solid blue;
+}
+
+#frames {
+	width: 1000px;
+	padding-left: 13%;
+	margin: auto;
+	/*margin: 20px 0 0 120px;*/
+}
+
+/*.class1 {
+	padding-right: 20px
+}*/
 
 footer {
+	width: 100%;
 	clear: both;
 }
