--- a/Home.css
+++ b/Home.css
@@ -3,6 +3,9 @@ body,html {
 	padding:0;
 }
 
+/*=============Background===================*/
+
+
 body {
 	background-image: url("Images/NewYork.jpg");
 	background-size: 100%;
@@ -18,6 +21,8 @@ body {
 	height:100%;
 }
 
+/*==============header==================*/
+
 header {
 	width: 100%;	
 }
@@ -25,56 +30,94 @@ header {
 header img {
 	width: 70px;
 	top: 0;
+	margin-bottom: 10px;
 	margin-left: 3px;
 	float: left;
 }
 
-nav ul {
+/*=============heder(social media)===========*/
+
+#social_media {
+}
+#social_media img {
+	width: 20px;
+	padding: 0;
+	margin: 0;
+}
+
+#social_media ul {
 	list-style: none;
 }
 
+#social_media li {
+	float: left;
+	margin: 45px 5px 0px 5px;
+	padding: 0px;
+}
+
+/*==============header(navi)==================*/
+nav {
+
+}
+
+nav ul {
+	list-style: none;
+	margin-right: 30px
+}
+
 nav li {
-	width: 50px;
-	float: right;
-	padding: 10px 10px;
-	margin: 20px 20px 0 0;
+	width: 110px;
+	float:right;
+	display: inline-block;
+	margin-top: 20px;
+	padding: 0px 10px;
 }
 
 nav a {
 	font-family: "Impact";
-	color: black;
+	font-size: 40px;
+	color: rgba(0,0,0,0.1);
+	
 }
 
 nav a:hover {
-	color: red;
+	color: rgba(230, 113, 0,0.9)
 }
 
+/*=================content==================*/
 
 #content {
 	width: 100%;
 	height: 75%;
 	border-top: 1px solid black;
-	margin: 0 auto;
+	margin: auto;
 	clear: both;
 }
 
-#content iframe {
-	width: 350px;
-	height: 200px;
-	margin: 25px;
+#frames {
+	width: 908px;
+	margin: auto;
+	margin-top: 50px;
 	/*border: 1px solid blue;*/
+
 }
 
-#frames {
-	width: 1000px;
-	padding-left: 13%;
-	margin: auto;
-	/*margin: 20px 0 0 120px;*/
+#frames img {
+	width: 300px;
+	height: 200px;
+	margin: 0 auto;
+	/*margin: 25px;*/
+	
 }
+
+
 
 /*.class1 {
 	padding-right: 20px
 }*/
+
+/*=================footer==================*/
+
 
 footer {
 	width: 100%;
