Added about page, made header ffixed

--- a/about.css
+++ b/about.css
@@ -1,4 +1,4 @@
-body,html {
+ody,html {
 	margin:0;
 	padding:0;
 }
@@ -94,36 +94,6 @@ nav a:hover {
 /*=================content==================*/
 
 #content {
-	width: 100%;
-	margin: auto;
-	clear: both;
-}
-
-#frames {
 	width: 908px;
-	margin: auto;
-	margin-top: 152px;
-	/*border: 1px solid blue;*/
-
-}
-
-#frames img {
-	width: 300px;
-	height: 200px;
-	margin: 0 auto;
-	/*margin: 25px;*/
-}
-
-
-
-/*.class1 {
-	padding-right: 20px
-}*/
-
-/*=================footer==================*/
-
-
-footer {
-	width: 100%;
-	clear: both;
+	margin: 152px auto;
 }
