--- a/contact.css
+++ b/contact.css
@@ -19,7 +19,7 @@ body {
 	top:0;
 	left:0;
 	width: 100%;
-	/*height:100%;*/
+	height:100%;
 }
 
 /*==============header==================*/
@@ -91,9 +91,13 @@ nav a:hover {
 	color: rgba(230, 113, 0,0.9)
 }
 
-/*=================content==================*/
+/*====================form=========================*/
 
-#content {
-	width: 908px;
-	margin: 152px auto;
+#form {
+	width: 400px;
+	margin-top: 300px;
+}
+
+form {
+	margin: 0 auto;
 }
