--- a/Home.css
+++ b/Home.css
@@ -24,6 +24,14 @@ body {
 
 /*==============header==================*/
 
+#header_layer {
+	width: 270px;
+	height: 34px;
+	margin-top: 72px;
+	border-radius: 0 0 57px 0;
+	background-color: rgba(255, 255, 255, 0.9)
+}
+
 header {
 	width: 100%;
 	height: 71px;
