--- a/contact.css
+++ b/contact.css
@@ -24,6 +24,14 @@ body {
 
 /*==============header==================*/
 
+#header_layer {
+	width: 270px;
+	height: 34px;
+	margin-top: 72px;
+	border-radius: 0 0 57px 0;
+	background-color: rgba(255, 255, 255, 0.9)
+}
+
 header {
 	width: 100%;
 	height: 71px;
@@ -93,9 +101,12 @@ nav a:hover {
 
 /*====================form=========================*/
 
+
 #form {
 	width: 500px;
-	margin: 200px auto;
+	margin:0 auto;
+	margin-top: 200px;
+	/*margin-bottom: ;*/
 	clear: both;
 }
 
