--- a/style.css
+++ b/style.css
@@ -221,13 +221,34 @@ nav a:hover {
 	width: 800px;
 	margin-left: 18%;
 	margin-top: 6%;
-	display: none;
+	/*display: none;*/
 }
 
 #lb_image {
 	width: 800px;
 	position: fixed;
-	display: none;
+	/*display: none;*/
+}
+
+#b_arrow{
+	position: fixed;
+	left: 0;
+	width: 40px;
+    height: 500px;
+    margin-left: 167px;
+    margin-top: 15px;
+    background-color: yellow;
+
+}
+
+#f_arrow{
+	position: fixed;
+	right: 0;
+    width: 40px;
+    height: 500px;
+    margin-right: 190px;
+    background-color: yellow;
+    margin-top: 15px
 }
 
 /*############### ABOUT PAGE CONTENT ############*/
